# fullstack

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
app/: callbacks.py  exceptions.py  main.py
app/api/v1/: router.py
app/core/: pagination.py  security.py  settings.py
app/core/exceptions/: auth.py  base_http.py  category.py  expense.py  income.py
app/core/memcached/: session.py
app/core/s3/: service.py
app/db/: __init__.py  database.py
app/db/models/: __init__.py  (+7 more)
app/migrations/: env.py
app/routers/: auth.py  expense.py  income.py  user.py
app/schemas/: category.py  expense.py  files.py  income.py  stats.py  token.py  transactions.py  user.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/finance-track-frontend/: README.md  vite.config.js
frontend/nginx/: nginx.conf
frontend/public/: robots.txt
postgres_data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_auth_api.py  test_categories_api.py  test_currency_api.py  test_income_api.py  test_spending_api.py  test_stats_api.py  test_user_api.py
tests/unit/: test_auth_service.py  test_category_service.py  test_currency_service.py  test_expense_crud.py  test_expense_service.py  test_memcached_session.py  test_s3_service.py  test_stats_crud.py  test_user_crud.py
(+161 files in other folders)
