[project]
name = "fullstack-aut-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.76",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
    "passlib>=1.7.4",
    "aiomcache>=0.8.2",
    "python-multipart>=0.0.22",
    "black>=26.3.1",
    "pyjwt>=2.12.1",
]
